src/objects/Milestone1_Project__c.object
<CustomObject>
    <description>Force.com Labs - PM - A collaborative enterprise which has a planned goal. A project can have many milestones.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partnerships</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beta_testers_added_to_course__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Beta-testers are added to course</inlineHelpText>
        <label>Beta-testers added to course</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beta_testing_feedback_given__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>T&amp;L generates beta-testing feedback and is shared with partner</inlineHelpText>
        <label>Beta-testing feedback given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>[For potential campaign tracking]</inlineHelpText>
        <label>Associated Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus_Image__c</fullName>
        <inlineHelpText>Integrate with partner campus image field in s12n authoring</inlineHelpText>
        <label>Campus Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Course_Language__c</fullName>
        <inlineHelpText>Integrate with shortname for course language (ie. English = &quot;en&quot;)</inlineHelpText>
        <label>Course Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_set_to_REAL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Integrate such that cell is checked if field isREAL = true, and unchecked if field isREAL = false</inlineHelpText>
        <label>Course set to REAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Behind_Original_Deadline__c</fullName>
        <formula>TODAY()-Original_Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Behind Original Deadline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>The date by which the project is scheduled to be completed by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Description</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discussion_Prompts__c</fullName>
        <inlineHelpText># &quot;Discussion Prompt&quot; items in course</inlineHelpText>
        <label># Discussion Prompts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_Type__c</fullName>
        <description>T&amp;L: Pulled from platform: domain type</description>
        <inlineHelpText>Pulled from platform: domain type</inlineHelpText>
        <label>Domain Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_of_Course_Message_set__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Integrate to see whether the end-of-course message is empty, or not.</inlineHelpText>
        <label>End of Course Message set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Banner_link__c</fullName>
        <inlineHelpText>Integrate with link of feature banner image in SDP authoring</inlineHelpText>
        <label>Feature Banner link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <inlineHelpText># &quot;reading&quot; items in course</inlineHelpText>
        <label># Readings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_CSM_Decision__c</fullName>
        <inlineHelpText>For CSM final review of RFP</inlineHelpText>
        <label>Final CSM Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deny</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_T_L_Overall_Score__c</fullName>
        <inlineHelpText>For T&amp;L assessment.
1 = Bottom 10%
3 = Average
5 = Top 10%</inlineHelpText>
        <label>Final T&amp;L Overall Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Advance_Amount__c</fullName>
        <inlineHelpText>USD dollar value of financial advance requested; if none, then input $0</inlineHelpText>
        <label>Financial Advance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Advance_Confirmation_Link__c</fullName>
        <inlineHelpText>If approved for a financial advance in the RFP process, this is the confirmation letter received by both parties</inlineHelpText>
        <label>Financial Advance Confirmation Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>For_RFP_Legal_Agreements_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the legal paperwork/signatures have been obtained</inlineHelpText>
        <label>For RFP: Legal Agreements Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formative_Ungraded_Quizzes__c</fullName>
        <inlineHelpText>Pulled from platform: # ungraded quizzes</inlineHelpText>
        <label># Formative (Ungraded) Quizzes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoogleGanntUrl__c</fullName>
        <inlineHelpText>Calculated.</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <inlineHelpText>&quot;headline&quot; text field</inlineHelpText>
        <label>Headline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(Used for tracking if ParMa sent an intro or hand-off email yet)</inlineHelpText>
        <label>Initiated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiative_Status__c</fullName>
        <inlineHelpText>(General status buckets)</inlineHelpText>
        <label>Initiative Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green (Confirmed/moving forward/completed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow (Waiting on something or someone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red (Dropped/rejected)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Instructor_Agreements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Instructor agreements collected and sent to executed-docs@coursera.org</inlineHelpText>
        <label>Instructor Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Owner_Identified__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Owner Identified</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>What date should this project start?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LTI__c</fullName>
        <inlineHelpText># &quot;LTI&quot; items in course</inlineHelpText>
        <label># LTI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <inlineHelpText>Integrate with sdp logo (thumbnail)</inlineHelpText>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Modules_Week_Mapping_set__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(manual task) to be communicated from ComOps to Producer</inlineHelpText>
        <label>Modules-Week Mapping set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modules__c</fullName>
        <inlineHelpText>Pulled from platform: # modules on course</inlineHelpText>
        <label># Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>Calculated as the next incomplete task with a due date in this project. This includes sub-milestones.</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>The next incomplete milestone due date. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Current_Notes__c</fullName>
        <inlineHelpText>Next Steps / Notes commentary</inlineHelpText>
        <label>Next Steps/Current Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Notes_Last_Updated__c</fullName>
        <inlineHelpText>Date timestamp of when the notes/next steps were last updated</inlineHelpText>
        <label>Next Steps/Notes Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Deadline__c</fullName>
        <inlineHelpText>Timestamps the original planned deadline of an RFP project</inlineHelpText>
        <label>Original Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_S12n__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent S12n</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Marketing_Blurb__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>&quot;partner_marketing_blurb&quot; text field</inlineHelpText>
        <label>Partner Marketing Blurb</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pedagogy_Eval_Collaborativeness__c</fullName>
        <inlineHelpText>For T&amp;L review</inlineHelpText>
        <label>Pedagogy Eval: Collaborativeness</label>
        <picklist>
            <picklistValues>
                <fullName>High (Top 10%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (Average)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low (Bottom 10%)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pedagogy_Eval_Quality_of_Assessment__c</fullName>
        <label>Pedagogy Eval: Quality of Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>High (Top 10%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (Average)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low (Bottom 10%)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pedagogy_Evaluation_Instructor_Quality__c</fullName>
        <inlineHelpText>For T&amp;L pedagogy evaluation</inlineHelpText>
        <label>Pedagogy Eval: Quality of Content</label>
        <picklist>
            <picklistValues>
                <fullName>High (Top 10%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (Average)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low (Bottom 10%)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pedagogy_Rubric__c</fullName>
        <inlineHelpText>For T&amp;L pedagogy evaluation</inlineHelpText>
        <label>Pedagogy Eval: Instructor Quality</label>
        <picklist>
            <picklistValues>
                <fullName>High (Top 10%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (Average)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low (Bottom 10%)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Peer_Reviews_Graded__c</fullName>
        <inlineHelpText>Pulled from platform: # graded peer reviews</inlineHelpText>
        <label># Peer Reviews (Graded)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peer_Reviews_Ungraded__c</fullName>
        <inlineHelpText>Pulled from platform: # ungraded peer reviews</inlineHelpText>
        <label># Peer Reviews (Ungraded)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>T&amp;L: Price per course; price on specialization is sum aggregate of courses; but if you bulk pay, there is a discount (ex. ~10%)</description>
        <inlineHelpText>Price per course; price on specialization is sum aggregate of courses; but if you bulk pay, there is a discount (ex. ~10%)</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Notes_Automatically_updated__c</fullName>
        <label>Prior Notes (Automatically updated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Production_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Technical QA notes generated and communicated to partner</inlineHelpText>
        <label>Technical QA feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programming_Assignments__c</fullName>
        <inlineHelpText># programming assignments</inlineHelpText>
        <label># Programming Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Project_Status__c</fullName>
        <formula>if(( Original_Deadline__c - Kickoff__c + 1)&gt;
( TODAY() - Kickoff__c + 1),IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10)&amp;&quot; Original Deadline: On Track&quot;,
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10)&amp;&quot; Original Deadline: Delayed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on a timestamp of original deadline, tracks whether the project is still on track with timing</inlineHelpText>
        <label>RFP Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round_1_Pre_Proposal_Materials_Link__c</fullName>
        <inlineHelpText>For RFP process: link to the submitted Round 1 materials</inlineHelpText>
        <label>Round 1 (Pre-Proposal) Materials Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Round_2_Additional_Materials_Link__c</fullName>
        <inlineHelpText>For RFP process: link to submitted Round 2 form</inlineHelpText>
        <label>Round 2 (Additional) Materials Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SDP_Edits_given__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(basecamp) SDP edits created and communicated to Producer</inlineHelpText>
        <label>SDP Edits given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_Recommendations_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marketing SEO recommendations generated and communicated to partner</inlineHelpText>
        <label>SEO Recommendations sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Domain__c</fullName>
        <inlineHelpText>Secondary catalogue domain</inlineHelpText>
        <label>Secondary Domain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Subdomain__c</fullName>
        <inlineHelpText>Secondary catalogue subdomain</inlineHelpText>
        <label>Secondary Subdomain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sessions_are_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Integrate such that box is checked if sessionsEnabledAt is not empty, and unchecked if sessionsEnabledAt is empty</inlineHelpText>
        <label>Sessions are enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slideshows__c</fullName>
        <inlineHelpText># &quot;Slideshow&quot; items in course</inlineHelpText>
        <label># Slideshows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( Total_Expense_Budget__c &gt; 0,
IMAGE(
&quot;http://chart.apis.google.com/chart?chtt=Milestone+Status+Snapshot&amp;&quot; &amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Planned (&quot; &amp; TEXT(Total_Expense_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Completed (&quot; &amp; TEXT(Total_Expense_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Delayed (&quot; &amp; TEXT(Total_Expense_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Dropped (&quot; &amp; TEXT(Total_Expense_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Expense_Budget__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Expense_Budget_from_Milestones__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Expense_Estimate__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Expense_Incurred__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100) 
, &quot;Project Expense - Budget, Planned, Estimated, Incurred&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Status Snapshot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BudgetMiletoneEstimate__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?chtt=Task+Time+Budget+Analysis&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Hours_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Hours_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Hours_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Hours_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Hours_Budget__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Hours_Budget_from_Milestones__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Hours_Estimate__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Hours_Incurred__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_HoursSummary__c</fullName>
        <formula>IF( Total_Hours_Budget__c &gt; 0, 
IMAGE(Status_BudgetMiletoneEstimate__c, &quot;Hours Summary: Budgeted, Planned, Estimated and Incurred.&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary (chart) - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_OpenVComplete__c</fullName>
        <formula>IF( Status_TasksOpenComplete__c != &apos;&apos;,
IMAGE( Status_TasksOpenComplete__c , &quot;Open vs. Complete Tasks&quot;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks (chart) - Deprec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Img_OpenLateBlocked__c</fullName>
        <formula>IMAGE( Status_TasksOpenBlockedLate__c , &quot;Open, Late &amp; Blocked Tasks.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks (chart) - Dep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenBlockedLate__c</fullName>
        <formula>IF(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) &gt; 0 , 
&quot;http://chart.apis.google.com/chart?chtt=Open+Task+Analysis&amp;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ))&amp;&quot;&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(Total_Late_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(Total_Blocked_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(Total_Open_Task_Count__c / max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100)&amp;&quot;|&quot;&amp; TEXT(Total_Late_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100) &amp;&quot;|&quot; &amp; TEXT(Total_Blocked_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100), &apos;/s.gif&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenComplete__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the project.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Enroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subdomain_Type__c</fullName>
        <description>T&amp;L: Pulled from platform: subdomain type</description>
        <inlineHelpText>Pulled from platform: subdomain type</inlineHelpText>
        <label>Subdomain Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subdomain Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subdomain Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subdomain Type 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subdomain Type 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subdomain Type 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subdomain Type 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subdomain Type 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subheader__c</fullName>
        <inlineHelpText>&quot;subheader&quot; text field</inlineHelpText>
        <label>Subheader</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summative_Graded_Quizzes__c</fullName>
        <inlineHelpText>Pulled from platform: # graded quizzes</inlineHelpText>
        <label># Summative (Graded) Quizzes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_L_Qualitative_Commentary__c</fullName>
        <inlineHelpText>Commentary from T&amp;L reviewer on rubric considerations</inlineHelpText>
        <label>T&amp;L Qualitative Commentary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp_Course_Launch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Integrate such that box is checked if launchedAt timestamp is not empty, and unchecked if launchedAt timestamp is empty</inlineHelpText>
        <label>Timestamp - Course Launch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timestamp_Review_and_Launch__c</fullName>
        <inlineHelpText>Integrate with timestamp when course team submits course by selecting &quot;Review and Launch&quot; in authoring</inlineHelpText>
        <label>Timestamp - Review and Launch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>T&amp;L: Pulled from platform: title</description>
        <inlineHelpText>Pulled from platform: title</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Blocked_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are blocked? (Calculated)</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Task_Count__c</fullName>
        <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
        <label>Total Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <inlineHelpText>The total expense budget for this project.</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from the milestone expense budgets assigned to this project.</inlineHelpText>
        <label>Total Expense Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Estimate__c</fullName>
        <inlineHelpText>Calculated from expense estimates on all child milestones</inlineHelpText>
        <label>Total Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>